[package]
name = "GitHub-Repository-Sync"
version = "0.1.0"
edition = "2021"

[dependencies]
git2 = "0.13"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
chrono = "0.4.38"
log = "0.4.22"
simplelog = "0.12.2"
tokio = { version = "1.39.3", features = ["full"] }
